--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "chaz6chez/Structure",
+    "name": "chaz6chez/structure",
     "description": "小型的数据映射过滤工具",
-    "version":"1.0",
+    "version":"1.1",
     "require": {
         "php": ">=5.6.0"
     },
@@ -14,12 +14,13 @@
     ],
     "autoload": {
         "psr-4": {
-            "Chaz\\": "Chaz/"
+            "Structure\\": "lib/Structure"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Chaz\\Test\\": "Test/"
+            "Test\\": "test/",
+            "Example\\": "examples/"
         }
     },
     "minimum-stability": "dev"
