--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=7.0.0"
     },
-    "license": "MIT",
+    "license": "Apache-2.0",
     "authors": [
         {
             "name": "chaz6chez",
@@ -14,12 +14,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Structure\\": "lib/Structure"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Test\\": "test/",
+            "Structure\\": "lib/Structure",
             "Example\\": "examples/"
         }
     },
