--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "chaz6chez/structure",
     "description": "小型的数据映射过滤工具",
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.2.0",
+        "ext-json": "*"
     },
     "license": "MIT",
     "authors": [
